Fixed Webcomics Z-Index on HomePage

--- a/assets/css/components/_webcomics.scss
+++ b/assets/css/components/_webcomics.scss
@@ -63,7 +63,7 @@ section.section-webcomics {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    z-index: 5;
+    //z-index: 5;
   }
 
   .webcomics-image-hover {
@@ -71,7 +71,7 @@ section.section-webcomics {
     top: 0;
     width: 100%;
     height: 200px;
-    z-index: 5;
+    //z-index: 5;
     background: $image-hover;
     opacity: 0;
   }
