--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,14 +557,14 @@ section.section-webcomics .webcomics-image {
   width: 100%;
   height: 200px;
   object-fit: cover;
-  z-index: 5; }
+  /*z-index: 5; */ }
 
 section.section-webcomics .webcomics-image-hover {
   position: absolute;
   top: 0;
   width: 100%;
   height: 200px;
-  z-index: 5;
+  /*z-index: 5;*/
   background: url("../images/DottedOverlay.svg");
   opacity: 0; }
 
